// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Component: Typeahead should produce matches on search 1`] = `
Object {
  "calculatingMatches": false,
  "inputValue": "",
  "matches": Array [
    Object {
      "type": "X",
      "value": "cross",
    },
  ],
}
`;

exports[`Component: Typeahead should produce no matches on empty query 1`] = `
Object {
  "calculatingMatches": false,
  "inputValue": "",
  "matches": Array [],
}
`;

exports[`Component: Typeahead should render ok by default 1`] = `
<Downshift
  breakingChanges={Object {}}
  defaultHighlightedIndex={null}
  defaultInputValue=""
  defaultIsOpen={false}
  defaultSelectedItem={null}
  environment={[Window]}
  getA11yStatusMessage={[Function]}
  id="downshift-1"
  itemToString={[Function]}
  onChange={[Function]}
  onInputValueChange={[Function]}
  onOuterClick={[Function]}
  onSelect={[Function]}
  onStateChange={[Function]}
  onUserAction={[Function]}
  selectedItemChanged={[Function]}
  stateReducer={[Function]}
/>
`;

exports[`Component: Typeahead should render with matches 1`] = `
<div
  className="Typeahead"
>
  <div
    className="List open"
  >
    <ActionList
      actions={
        Array [
          Object {
            "className": "",
            "content": <TypeaheadItem
              helpText="X"
              value="cross"
            />,
            "highlighted": true,
          },
        ]
      }
      groupByKey="section"
    />
  </div>
  <TextField
    resize="both"
    type="text"
  />
</div>
`;

exports[`Component: Typeahead should update matches on field change 1`] = `
Object {
  "calculatingMatches": false,
  "inputValue": "",
  "matches": Array [
    Object {
      "type": "X",
      "value": "cross",
    },
  ],
}
`;
